[fd0d57228692a5a90d1efa05c8308c129cf14924]: Update 2019-09-20-integracao-sdk-ios.md

--- a/manual/autorizacao-com-autenticacao.html
+++ b/manual/autorizacao-com-autenticacao.html
@@ -258,7 +258,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
 
 <h3 id="response">Response</h3>
 
-<p>Vide https://developercielo.github.io/manual/cielo-ecommerce#resposta</p>
+<p>Veja mais: <a href="https://developercielo.github.io/manual/cielo-ecommerce#resposta">https://developercielo.github.io/manual/cielo-ecommerce#resposta</a></p>
 
 <h1 id="autorização-com-autenticação-webservice-15">Autorização com Autenticação (Webservice 1.5)</h1>
 
@@ -340,7 +340,7 @@ Este procedimento é válido também para estabelecimentos que realizaram a aute
 
 <h3 id="response-1">Response</h3>
 
-<p>Vide https://developercielo.github.io/manual/webservice-1-5#tipos-de-retorno</p>
+<p>Veja mais: <a href="https://developercielo.github.io/manual/webservice-1-5#tipos-de-retorno">https://developercielo.github.io/manual/webservice-1-5#tipos-de-retorno</a></p>
 
 </div>
 
