[b165b5580908adaf98c69d0efe122a45bdb77a84]: Update 2000-01-01-controletransacional4.md

--- a/manual/controletransacional4.html
+++ b/manual/controletransacional4.html
@@ -1859,6 +1859,13 @@ O response possuirá o <code class="highlighter-rouge">Checkout_Cielo_Order_Numb
       <td>Transação não é possível ser processada no estabelecimento. Entre em contato com a Cielo para obter mais detalhes Transação</td>
       <td>Não</td>
     </tr>
+    <tr>
+      <td>BP171</td>
+      <td>Rejeitado por risco de Fraude</td>
+      <td>Transação rejeitada por risco de fraude</td>
+      <td>Transação rejeitada por risco de fraude</td>
+      <td>Nâo</td>
+    </tr>
   </tbody>
 </table>
 
