[fd285478d1a46da7f2a7d1fdcc9790a1f29a4105]: Update 2019-01-28-qrcode.md

--- a/manual/qrcode.html
+++ b/manual/qrcode.html
@@ -513,14 +513,14 @@ public class EncriptCard {
     </tr>
     <tr>
       <td><code class="highlighter-rouge">carrier.deviceId</code></td>
+      <td>Identificador único de cada dispositivo.</td>
       <td> </td>
       <td> </td>
-      <td> </td>
-      <td> </td>
+      <td>Sim</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">crc.qrCodeText</code></td>
-      <td>QRCode</td>
+      <td>QRCode do POS</td>
       <td> </td>
       <td> </td>
       <td>Sim</td>
