[fdd429b2564e8b76d8f28bbf5fa28aa7e4918ec7]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14114,13 +14114,14 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
 
 <h1 id="consulta-bin">Consulta Bin</h1>
 
-<p>A “<strong>Consulta de Bins</strong>”  é um serviço de <strong>pesquisa de dados do cartão</strong>, de crédito ou débito, que os lojistas da API Cielo Ecommerce podem utilizar para validar se os dados preenchidos em tela sobre o cartão são válidos.
-O serviço retornar os seguintes dados sobre o cartão:</p>
+<p>O “<strong>Consulta de Bins</strong>”  é um serviço de <strong>pesquisa de dados do cartão</strong>, de crédito ou débito, que retorna ao lojista da API Cielo e-Commerce informações que permitem validar os dados preenchidos na tela do checkout. O serviço retorna os seguintes dados sobre o cartão:</p>
 
 <ul>
-  <li><strong>Bandeira do cartão</strong></li>
-  <li><strong>Tipo de cartão:</strong>Crédito, Débito ou Múltiplo (Crédito e Débito)</li>
-  <li><strong>Nacionalidade do cartão:</strong> estrangeiro ou nacional</li>
+  <li><strong>Bandeira do cartão:</strong> Nome da Bandeira</li>
+  <li><strong>Tipo de cartão:</strong> Crédito, Débito ou Múltiplo (Crédito e Débito)</li>
+  <li><strong>Nacionalidade do cartão:</strong> Estrangeiro ou Nacional</li>
+  <li><strong>Cartão Corporativo:</strong> Se o cartão é ou não é corporativo</li>
+  <li><strong>Banco Emissor:</strong> Código e Nome</li>
 </ul>
 
 <p>Essas informações permitem tomar ações no momento do checkout para melhorar a conversão da loja.</p>
