[81624390a995bb2602f1108a315c8533e6914dbf]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14000,12 +14000,14 @@ That way, when a transaction with recurrent markup is submitted to the API and C
 
 <h1 id="bin-checker">BIN Checker</h1>
 
-<p>The BIN Checker is credit or debit card data search service, that Cielo Ecommerce merchants can use to validate whether the screen filled data on the card is valid. The service return the following data on the card:</p>
+<p>The “<strong>BIN Checker</strong>” is <strong>credit or debit card data search service</strong>, which returns to the Cielo e-Commerce API merchant information that allows you to validate the data entered on the checkout screen. The service return the following data on the card:</p>
 
 <ul>
-  <li><strong>Card Brand</strong></li>
-  <li><strong>Card Type:</strong>Credit, Debit or Multiple (Credit and Debit)</li>
-  <li><strong>Card Nationality:</strong> Foreign or national (Brazil)</li>
+  <li><strong>Card Brand:</strong> Brand Name</li>
+  <li><strong>Card Type:</strong> Credit, Debit or Multiple (Credit and Debit)</li>
+  <li><strong>Card Nationality:</strong> Foreign or National (Brazil)</li>
+  <li>**Card : Whether or not the card is corporate</li>
+  <li><em>Issuing Bank</em>:** Code and Name</li>
 </ul>
 
 <p>This information makes it possible to take some actions on the checkout and increase the conversion rate.</p>
