[53029255e8fc100daeda5f08c6851faae8e1afd8]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -14006,8 +14006,8 @@ That way, when a transaction with recurrent markup is submitted to the API and C
   <li><strong>Card Brand:</strong> Brand Name</li>
   <li><strong>Card Type:</strong> Credit, Debit or Multiple (Credit and Debit)</li>
   <li><strong>Card Nationality:</strong> Foreign or National (Brazil)</li>
-  <li>**Card : Whether or not the card is corporate</li>
-  <li><em>Issuing Bank</em>:** Code and Name</li>
+  <li><strong>Card:</strong> Whether or not the card is corporate</li>
+  <li><strong>Issuing Bank:</strong> Code and Name</li>
 </ul>
 
 <p>This information makes it possible to take some actions on the checkout and increase the conversion rate.</p>
