[917e60733f57a1af782f886ebd9a1c9739a99c6e]: Update 2017-01-01-cielo-lio.md
Adição lista de captura

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1125,6 +1125,10 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
       <td>3</td>
       <td>Transação com cartão contactless</td>
     </tr>
+    <tr>
+      <td>6</td>
+      <td>Transação com QRCode</td>
+    </tr>
   </tbody>
 </table>
 
