[4abde7e9bc5ed59a2ad191888fc992347855350c]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -322,7 +322,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
     </tr>
     <tr>
       <td>Banco do Brasil</td>
-      <td>Não registrado</td>
+      <td>Carteira 17 e Registrado</td>
     </tr>
   </tbody>
 </table>
