[9787dfff7eff5aad97a0329af2e263f22883e062]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -304,6 +304,8 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
 
 <p><strong>Boleto</strong></p>
 
+<p>O Checkout Cielo permite a utilização de Boletos do Bradesco (Carteira 26 e SPD) e Banco do Brasil (Carteira 17). Esse meio de pagamento precisa ser cadastrado pelo Suporte Cielo para que seja disponibilizado no Backoffice Checkout.</p>
+
 <table>
   <thead>
     <tr>
@@ -322,7 +324,7 @@ A página de pagamentos Cielo proporciona um alto nível de confiança, seguindo
     </tr>
     <tr>
       <td>Banco do Brasil</td>
-      <td>Carteira 17 e Registrado</td>
+      <td>Registrado</td>
     </tr>
   </tbody>
 </table>
