[9a184a3f1acf625894ad121d9009da57d45911af]: Update 2000-01-01-checkout-cielo.md

--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -313,7 +313,7 @@ The Cielo payments page provides a high level of confidence, following PCI secur
     </tr>
     <tr>
       <td>Banco do Brasil</td>
-      <td>Not registered</td>
+      <td>Registered</td>
     </tr>
   </tbody>
 </table>
@@ -2129,7 +2129,7 @@ This degree of risk is what should guide the merchant’s decision to capture or
 
 <h3 id="bank-slip">Bank slip</h3>
 
-<p>Checkout Cielo allows the use of Bradesco (Wallet 26 and SPS) and Banco do Brasil Bank slips (Wallet 18).
+<p>Checkout Cielo allows the use of Bradesco (Wallet 26 and SPS) and Banco do Brasil Bank slips (Wallet 17).
 This means of payment must be registered by Cielo Support to be made available in Backoffice Checkout.</p>
 
 <p>Supported Banks:</p>
