[2b2507cd04541596b94be290dbae26cb127b8dea]: Update 2000-01-01-checkout-cielo.md

--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -2512,7 +2512,7 @@ Abaixo são descritos todos os campos retornados, assim como suas definições e
       <td>1</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">payment_maskedcredicard</code></td>
+      <td><code class="highlighter-rouge">payment_maskedcreditcard</code></td>
       <td>Cartão Mascarado (Somente para transações com meio de pagamento cartão de crédito)</td>
       <td>Alfanumérico</td>
       <td>20</td>
