--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -4704,10 +4704,10 @@ Abaixo especificamos qualquer diferença existente:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.PaymentAccountReference</code></td>
-      <td>O PAR(payment account reference) é o número que associa diferentes tokens a um mesmo cartão. Será retornado pelas bandeiras Master e Visa e repassado para os clientes do e-commerce Cielo. Caso a bandeira não envie a informação o campo não será retornado.</td>
       <td>Numérico</td>
       <td>29</td>
-      <td>—</td>
+      <td>Não</td>
+      <td>O PAR(payment account reference) é o número que associa diferentes tokens a um mesmo cartão. Será retornado pelas bandeiras Master e Visa e repassado para os clientes do e-commerce Cielo. Caso a bandeira não envie a informação o campo não será retornado.</td>
     </tr>
   </tbody>
 </table>
