[4819f6948bf8140a6ea8811cc17ac759147445f1]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -2792,6 +2792,8 @@ Abaixo especificamos qualquer diferença existente:</p>
   </tbody>
 </table>
 
+<aside class="warning">Atenção: Os retornos de autorização estão sujeitos a inserção de novos campos advindos das bandeiras/emissores. Faça sua integração de forma a prever este tipo de comportamento utilizando adequadamente as técnicas de serialização e deserialização de objetos.</aside>
+
 <h3 id="transação-padrão">Transação padrão</h3>
 
 <p>Para criar uma venda que utilizará cartão de débito, é necessário fazer um POST para o recurso Payment conforme o exemplo.</p>
