[7e8303ba7a58fe07801e919cc3ee1b682349ded5]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -10696,7 +10696,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     <tr>
       <td><code class="highlighter-rouge">Payment.AuthorizationCode</code></td>
       <td>Authorization code.</td>
-      <td>Texto</td>
+      <td>Text</td>
       <td>6</td>
       <td>—</td>
     </tr>
@@ -10731,21 +10731,21 @@ In this model, the merchant’ system is in charge of defining the period, the t
     <tr>
       <td><code class="highlighter-rouge">ExternalAuthentication.Cavv</code></td>
       <td>The Cavv value is returned by the authentication mechanism.</td>
-      <td>Texto</td>
+      <td>Text</td>
       <td>28</td>
       <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ExternalAuthentication.Xid</code></td>
       <td>The Xid value is returned by the authentication mechanism.</td>
-      <td>Texto</td>
+      <td>Text</td>
       <td>28</td>
       <td>Yes</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ExternalAuthentication.Eci</code></td>
       <td>The Eci value is returned by the authentication mechanism.</td>
-      <td>Número</td>
+      <td>Number</td>
       <td>1</td>
       <td>Yes</td>
     </tr>
@@ -10759,7 +10759,7 @@ In this model, the merchant’ system is in charge of defining the period, the t
     <tr>
       <td><code class="highlighter-rouge">Payment.Recurrent</code></td>
       <td>Marking an unscheduled recurrence transaction</td>
-      <td>boolean</td>
+      <td>Boolean</td>
       <td>5</td>
       <td>Yes</td>
     </tr>
