[32103d7ebfa348544742d7b29300884e01a4871c]: Update 2018-09-10-emv3ds.md

--- a/manual/emv3ds.html
+++ b/manual/emv3ds.html
@@ -184,6 +184,11 @@
       <td><strong>VISA</strong></td>
     </tr>
     <tr>
+      <td>Banco do Brasil</td>
+      <td>—</td>
+      <td>Crédito/Débito</td>
+    </tr>
+    <tr>
       <td>Caixa Econômica</td>
       <td>—</td>
       <td>Crédito</td>
