[0106eafa7e1c214cf55da5daef6024ec7e4eb66d]: Update 2018-09-10-emv3ds.md

--- a/en/manual/emv3ds.html
+++ b/en/manual/emv3ds.html
@@ -186,6 +186,11 @@ Currently are available:</p>
       <td><strong>VISA</strong></td>
     </tr>
     <tr>
+      <td>Banco do Brasil</td>
+      <td>—</td>
+      <td>Credit/Debit</td>
+    </tr>
+    <tr>
       <td>Caixa Econômica</td>
       <td>—</td>
       <td>Credit</td>
