[246720f56b7a4a190ca8e2250102c57da0a72ab9]: Update 2017-01-01-cielo-lio.md

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -1189,6 +1189,33 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:</p>
   </tbody>
 </table>
 
+<table>
+  <thead>
+    <tr>
+      <th>Você pode pegar outros dados diretamente do objeto payments</th>
+      <th> </th>
+    </tr>
+    <tr>
+      <th>Campo</th>
+      <th>Descrição do campo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>authCode</td>
+      <td>Cód de Autorização(AUT do recibo)</td>
+    </tr>
+    <tr>
+      <td>cieloCode</td>
+      <td>Campo DOC do recibo (NSU)</td>
+    </tr>
+    <tr>
+      <td>brand</td>
+      <td>Bandeira do Cartão</td>
+    </tr>
+  </tbody>
+</table>
+
 <blockquote>
   <p>Todos os valores financeiros são informados sem vírgula, ou seja 2500 são equivalentes a R$ 25,00.</p>
 </blockquote>
