[24b0a65517bac4c22de14e1c525fc7015484eea6]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -1425,6 +1425,10 @@
   </tbody>
 </table>
 
+<h2 id="debit-card-sale-with-black-stripe-reading-and-password">Debit card sale with black stripe reading and password</h2>
+
+<h3 id="request-2">Request</h3>
+
 </div>
 
 
