[00865f6d47bd580762a1ed408460d2513ec19e78]: Update 2019-07-10-solution-omni.md

--- a/en/manual/solution-omni.html
+++ b/en/manual/solution-omni.html
@@ -1429,6 +1429,8 @@
 
 <h3 id="request-2">Request</h3>
 
+<aside class="request"><span class="method post">POST</span> <span class="endpoint">/1/physicalSales/</span></aside>
+
 </div>
 
 
